# BookMind

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backup.rs  cloud_ai.rs  commands.rs  database.rs  encryption.rs  lib.rs  library.rs  main.rs  models.rs  notes.rs  paths.rs  reader_data.rs  search.rs  settings.rs  sidecar.rs  tasks.rs  tests.rs  translation.rs
apps/desktop/src-tauri/src/characters/: events.rs  extraction.rs  filters.rs  ids.rs  io.rs  mod.rs  name_rules.rs  overview.rs  relations.rs  status.rs  tests.rs
apps/desktop/src-tauri/src/characters/tests/: extraction_cases.rs  fixtures.rs  output_cases.rs  payload_cases.rs  (+2 more)
apps/desktop/src-tauri/src/commands/: character_commands.rs  knowledge_commands.rs  library_commands.rs  reader_data_commands.rs  search_ai_commands.rs  settings_commands.rs  system_commands.rs  task_commands.rs  translation_commands.rs
apps/desktop/src-tauri/src/models/: ai.rs  character.rs  library.rs  reader.rs  task.rs
apps/desktop/src-tauri/src/search/: chunk_storage.rs  chunking.rs  local_ai.rs  query.rs
apps/desktop/src-tauri/src/tasks/: errors.rs  kinds.rs  progress.rs  runner.rs  store.rs
apps/desktop/src-tauri/src/tests/: backup_tests.rs  characters_tests.rs  encryption_tests.rs  import_tests.rs  library_tests.rs  notes_tests.rs  reader_data_tests.rs  search_tests.rs  settings_tests.rs  sidecar_tests.rs  tasks_tests.rs
(+674 files in other folders)
