[package]
name = "bookmind-desktop"
version = "0.1.0"
description = "BookMind local-first desktop reader"
authors = ["BookMind"]
edition = "2021"

[lib]
name = "bookmind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
flate2 = "1"
regex = "1"
scraper = "0.23"
tauri-plugin-dialog = "2.7.1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
reqwest = { version = "0.13.4", features = ["blocking", "form", "json"] }
url = "2"
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
base64 = "0.22"
md5 = "0.8"
sha2 = "0.10"
rquickjs = "0.12.1"
argon2 = "0.5"
epub-parser = "0.3"
mobi = "0.8"
pdf-extract = "0.12"
zip = "2.4"
directories = "5"
